fix align sideOffset and add shadow

--- a/src/components/Popover/PopoverStyle.scss
+++ b/src/components/Popover/PopoverStyle.scss
@@ -13,5 +13,6 @@
     background-color: $white;
     border-radius: 16px;
     padding: 24px;
+    box-shadow: 0px 2px 5px 0px rgba(182, 179, 179, 0.25);
   }
 }
